# wurun

./: .releaserc.json  CHANGELOG.md  CITATION.cff  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_wurun.py  use_case_notebook.ipynb  wurun.py
.devcontainer/: devcontainer.json
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish.yml  python-semantic-release.yml  release-drafter.yml  semantic-release.yml
docs/: index.html
scripts/: update_version.py
