[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wurun"
version = "0.1.0"
description = "Async OpenAI API wrapper for Jupyter notebooks"
dependencies = [
    "httpx[http2]>=0.24.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]